--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 near-sdk = "3.1.0"
+near-contract-standards = "3.1.1"
 chrono = "0.4"
 
 [profile.release]
