--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "test": "npm run build:contract:debug && cd contract && cargo test -- --nocapture && cd .. && jest test --runInBand"
   },
   "devDependencies": {
+    "@babel/core": "~7.14.0",
+    "@babel/preset-env": "~7.14.0",
+    "@babel/preset-react": "~7.13.13",
+    "babel-jest": "~26.6.2",
     "env-cmd": "~10.1.0",
     "gh-pages": "~3.1.0",
     "jest": "~26.6.2",
@@ -24,18 +28,44 @@
     "near-cli": "~1.6.0",
     "nodemon": "~2.0.3",
     "parcel-bundler": "~1.12.4",
+    "react-test-renderer": "~17.0.1",
     "shelljs": "~0.8.4"
   },
   "dependencies": {
+    "@mui/material": "^5.1.0",
     "moment": "^2.29.1",
     "near-api-js": "~0.41.0",
+    "react": "~17.0.1",
+    "react-dom": "~17.0.1",
     "regenerator-runtime": "^0.13.9"
   },
+  "resolutions": {
+    "@babel/preset-env": "7.13.8"
+  },
   "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/src/__mocks__/fileMock.js"
+    },
+    "setupFiles": [
+      "<rootDir>/src/jest.init.js"
+    ],
     "testEnvironment": "near-cli/test_environment",
     "testPathIgnorePatterns": [
       "<rootDir>/contract/",
       "<rootDir>/node_modules/"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   }
 }
