--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "deploy:contract": "near deploy",
     "deploy:pages": "gh-pages -d dist/",
     "deploy": "npm run build && npm run deploy:contract && npm run deploy:pages",
-
     "start": "echo The app is starting! It will automatically open in your browser when ready && env-cmd -f ./neardev/dev-account.env parcel src/index.html --open",
     "dev": "nodemon --watch contract/src -e rs --exec \"npm run start\"",
     "test": "npm run build:contract:debug && cd contract && cargo test -- --nocapture && cd .. && jest test --runInBand",
-    "local":"parcel serve src/index.html/parcel serve src/index.html"
+    "local": "parcel serve src/index.html/parcel serve src/index.html"
   },
   "devDependencies": {
     "@babel/core": "~7.14.0",
@@ -35,13 +34,18 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@mui/material": "^5.1.0",
+    "@mui/icons-material": "^5.1.0",
+    "@mui/lab": "^5.0.0-alpha.54",
+    "@mui/material": "^5.0.0",
     "@mui/system": "^5.1.0",
     "@types/react": "^16.8.6 || ^17.0.0",
+    "date-fns": "^2.25.0",
+    "dayjs": "^1.10.7",
+    "luxon": "^1.28.0",
     "moment": "^2.29.1",
     "near-api-js": "~0.41.0",
     "react": "^17.0.2",
-    "react-dom": "~17.0.1",
+    "react-dom": "^17.0.2",
     "regenerator-runtime": "^0.13.9"
   },
   "resolutions": {
