--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "date-fns": "^2.25.0",
     "dayjs": "^1.10.7",
     "luxon": "^1.28.0",
+    "mobx": "^6.3.7",
+    "mobx-react": "^7.2.1",
     "moment": "^2.29.1",
     "near-api-js": "~0.41.0",
     "react": "^17.0.2",
