--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "~2.0.3",
     "parcel-bundler": "^1.9.4",
     "react-test-renderer": "~17.0.1",
+    "sass": "^1.43.4",
     "shelljs": "~0.8.4"
   },
   "dependencies": {
