--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@mui/lab": "^5.0.0-alpha.54",
     "@mui/material": "^5.0.0",
     "@mui/system": "^5.1.0",
+    "@rumess/react-flip-countdown": "^1.2.3",
     "@types/react": "^16.8.6 || ^17.0.0",
     "date-fns": "^2.25.0",
     "dayjs": "^1.10.7",
