--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
     "@mui/icons-material": "5.1.1",
+    "@mui/lab": "^5.0.0-alpha.54",
     "@mui/material": "5.1.1",
     "@mui/styled-engine": "5.1.1",
-    "@mui/lab": "^5.0.0-alpha.54",
     "@rumess/react-flip-countdown": "^1.2.3",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
     "chart.js": "3.4.1",
     "chroma-js": "2.1.2",
+    "date-fns": "^2.27.0",
     "env-cmd": "^10.1.0",
+    "humanize": "^0.0.9",
     "mobx": "^6.3.8",
     "mobx-react": "^7.2.1",
     "moment": "^2.29.1",
