--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Soft UI Dashboard",
-  "name": "Soft UI Dashboard React",
+  "short_name": "Token Factory",
+  "name": "Token Hub: Token Factory",
   "icons": [
     {
       "src": "images/favicon.png",
