--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-chartjs-2": "3.0.4",
     "react-countup": "5.2.0",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-flatpickr": "3.10.7",
     "react-github-btn": "1.2.1",
     "react-router-dom": "5.2.0",
