--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-github-btn": "1.2.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.3",
+    "sass": "^1.45.1",
     "stylis": "4.0.10",
     "stylis-plugin-rtl": "2.1.0",
     "uuid": "8.3.2",
@@ -45,7 +46,7 @@
     "build": "npm run build:contract && npm run build:web",
     "build:contract": "node contract/compile.js",
     "build:contract:debug": "node contract/compile.js --debug",
-    "build:web": "parcel build src/index.html --public-url ./",
+    "build:web": "react-scripts build",
     "dev:deploy:contract": "near dev-deploy",
     "deploy:contract": "near deploy",
     "deploy:pages": "gh-pages -d dist/",
